# model-service

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  docker-compose.yaml  nginx.conf  pyproject.toml  requirements.txt
.github/workflows/: build_and_push_models.yaml
deploy/: api.yaml  applicationset.yaml  pvc.yaml  stage.yaml  warehouse.yaml
deploy/charts/model-service-stage3/: Chart.yaml  values.yaml
deploy/stage3/: README.md
deploy/stage3/platform/: 00-traefik-helmchartconfig.yaml  10-keda-http-add-on.yaml  10-platform-services.yaml  20-model-service-base.yaml  ghcr-pull-secret.yaml.example  kustomization.yaml
deploy/stage3/values/: whisperx.values.yaml.example  yolo.values.yaml.example
docs/: 01_ABOUT.MD  02_CONTRIBUTING.md
http/: info.http  whisper.http  yolo.http
http/whisperx/: info.http  predict.http  predict_old.http  predict_transcript.http  short_predict.http
http/yolo/: info.http  predict.http  predict_pose.http
k8s/: ingress.yaml  whisperx.yaml  yolo.yaml
scripts/: generate_local_infra.py
scripts/cluster/: common.sh  down-local-libvirt.sh  status-local-libvirt.sh  up-local-libvirt.sh
src/: config.py  main.py
src/jobs/: __init__.py  queue.py  redis_store.py  schemas.py
src/lib/model/: __init__.py
src/lib/validator/: __init__.py
src/model/: __init__.py  catalog.py
src/model/whisper/: __init__.py  (+1 more)
src/storage/: __init__.py  blob_store.py  s3.py
src/utils/: remote.py
src/webhooks/: __init__.py  delivery.py
src/worker/: __init__.py  runner.py
terraform/: README.md  clould-init.yaml  main.tf  variables.tf
(+64 files in other folders)
